{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 1024,
  "lineage": "71f18e5b-1363-c404-3fac-3e0c2f463f08",
  "resources": [
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:loadbalancer/app/text-messenger-alb/8851090500be50a5",
            "arn_suffix": "app/text-messenger-alb/8851090500be50a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "text-messenger-alb-659212057.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:loadbalancer/app/text-messenger-alb/8851090500be50a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "text-messenger-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b5aac50b74973bd1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0123874b5fd028997"
              },
              {
                "subnet_id": "subnet-03b4cc603aa595cb0"
              },
              {
                "subnet_id": "subnet-04f6ebfa3a0c780fb"
              },
              {
                "subnet_id": "subnet-067c4fef793582ca1"
              },
              {
                "subnet_id": "subnet-0caa6754f16c670d1"
              },
              {
                "subnet_id": "subnet-0f1bed8df8b8649a3"
              }
            ],
            "subnets": [
              "subnet-0123874b5fd028997",
              "subnet-03b4cc603aa595cb0",
              "subnet-04f6ebfa3a0c780fb",
              "subnet-067c4fef793582ca1",
              "subnet-0caa6754f16c670d1",
              "subnet-0f1bed8df8b8649a3"
            ],
            "vpc_id": "vpc-03f83890770cf601e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:loadbalancer/app/text-messenger-alb/8851090500be50a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-auth-service/54aa71af7af9ceb0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/7191e327a1cd6cf5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/7191e327a1cd6cf5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "chat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-chat-service/832aaba4b1e85152",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/577def42d230ec79",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/chats/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/577def42d230ec79",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 30,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "file",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-file-service/342dfd9e775333f6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/fa0857df0e38c5d6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/files/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/fa0857df0e38c5d6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 40,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-frontend/bac7f84a3d6caad9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/4cc315b72580dd9f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/4cc315b72580dd9f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "notification",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-notification-service/6f538b69210fcaa2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/2f9330f265ca4e1a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/notifications/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/2f9330f265ca4e1a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 50,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "socket",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-chat-service/832aaba4b1e85152",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/7a9e869afe3ebb49",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/socket/websocket"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/7a9e869afe3ebb49",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 25,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-user-service/9e7cb39b4c2dcce1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/d0eefe3a990d21f8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/users/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener-rule/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b/d0eefe3a990d21f8",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:listener/app/text-messenger-alb/8851090500be50a5/72c21cc19a674f9b",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb.app",
            "module.fargate.aws_lb_listener.http",
            "module.fargate.aws_lb_target_group.tg",
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "auth-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-auth-service/54aa71af7af9ceb0",
            "arn_suffix": "targetgroup/tg-auth-service/54aa71af7af9ceb0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-auth-service/54aa71af7af9ceb0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-auth-service",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        },
        {
          "index_key": "chat-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-chat-service/832aaba4b1e85152",
            "arn_suffix": "targetgroup/tg-chat-service/832aaba4b1e85152",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-chat-service/832aaba4b1e85152",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-chat-service",
            "port": 4002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        },
        {
          "index_key": "file-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-file-service/342dfd9e775333f6",
            "arn_suffix": "targetgroup/tg-file-service/342dfd9e775333f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-file-service/342dfd9e775333f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-file-service",
            "port": 4003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-frontend/bac7f84a3d6caad9",
            "arn_suffix": "targetgroup/tg-frontend/bac7f84a3d6caad9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-frontend/bac7f84a3d6caad9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-frontend",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        },
        {
          "index_key": "notification-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-notification-service/6f538b69210fcaa2",
            "arn_suffix": "targetgroup/tg-notification-service/6f538b69210fcaa2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-notification-service/6f538b69210fcaa2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-notification-service",
            "port": 4004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        },
        {
          "index_key": "user-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-user-service/9e7cb39b4c2dcce1",
            "arn_suffix": "targetgroup/tg-user-service/9e7cb39b4c2dcce1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:733338247552:targetgroup/tg-user-service/9e7cb39b4c2dcce1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-user-service",
            "port": 4001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03f83890770cf601e"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733338247552:security-group/sg-0b5aac50b74973bd1",
            "description": "Security group for backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5aac50b74973bd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4003
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4004
              }
            ],
            "name": "backend-security-group",
            "name_prefix": "",
            "owner_id": "733338247552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03f83890770cf601e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733338247552:security-group/sg-0b5f92a798676f3d4",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5f92a798676f3d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5aac50b74973bd1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "733338247552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03f83890770cf601e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.backend_sg"
          ]
        }
      ]
    }
  ]
}